data/derived/comb/progs/unify/prog8127.ml.out
Characters 70-74:
  List.fold_left f base fs;;
                   ^^^^
Error: This expression has type 'a list -> 'a -> 'a list
       but an expression was expected of type 'b list
